# l2d_flutter

./: .gitignore  ffigen.yaml  pubspec.yaml
Samples/D3D11/: README.ja.md  README.md
Samples/D3D11/Demo/proj.d3d11.cmake/: CMakeLists.txt
Samples/D3D9/Demo/proj.d3d9.cmake/: CMakeLists.txt
Samples/Metal/Demo/proj.ios.cmake/: CMakeLists.txt
Samples/OpenGL/Demo/proj.ios.cmake/: CMakeLists.txt
Samples/OpenGL/Demo/proj.mac.cmake/: CMakeLists.txt
Samples/OpenGL/Demo/proj.win.cmake/: CMakeLists.txt
Samples/Vulkan/: README.ja.md  README.md
Samples/Vulkan/Demo/proj.linux.cmake/: CMakeLists.txt
Samples/Vulkan/Demo/proj.win.cmake/: CMakeLists.txt
Samples/Vulkan/Shaders/src/: FragSprite.frag
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
benchmark/: README.md  alloc_tracker.dart  baseline.json  compare_baseline.dart  fixtures.dart  harness.dart  run_all.dart
benchmark/effect/: breath.dart  eye_blink.dart  look.dart  pose.dart
benchmark/math/: cardano.dart  matrix.dart  transcendentals.dart  vector2.dart
benchmark/motion/: curve_eval.dart  full_motion.dart  queue_transition.dart
benchmark/physics/: pendulum.dart  pendulum_stress.dart
benchmark/pipeline/: full_frame.dart  model_scaling.dart  multi_instance.dart  multi_model.dart
benchmark/rendering/: cpu_draw.dart
benchmark/stress/: expression_storm.dart  gc_pressure.dart  motion_spam.dart
docs/: PERFORMANCE.md
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: benchmark_helpers.dart  live2d_benchmark_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test_driver/: perf_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: l2d_flutter_plugin.podspec
ios/Classes/: l2d_flutter_plugin.c
lib/: l2d_flutter.dart  l2d_flutter_plugin.dart
lib/src/core/: aligned_memory.dart  cubism_canvas.dart  cubism_core.dart  cubism_drawable.dart  cubism_moc.dart  cubism_model.dart  cubism_parameter.dart  cubism_part.dart  native_library.dart
lib/src/framework/: cubism_model_setting_json.dart
lib/src/framework/effect/: cubism_breath.dart  cubism_eye_blink.dart  cubism_look.dart  cubism_pose.dart
lib/src/framework/id/: cubism_default_parameter_id.dart  cubism_id.dart
lib/src/framework/math/: cubism_math.dart  cubism_matrix44.dart  cubism_model_matrix.dart  cubism_vector2.dart  cubism_view_matrix.dart  float32.dart  libm.dart
lib/src/framework/motion/: cubism_expression_motion.dart  cubism_motion.dart  cubism_motion_manager.dart  cubism_motion_queue_entry.dart  cubism_motion_queue_manager.dart
lib/src/framework/physics/: cubism_physics.dart
lib/src/widgets/: live2d_controller.dart  live2d_widget.dart
linux/: CMakeLists.txt
macos/: l2d_flutter_plugin.podspec
src/: CMakeLists.txt  l2d_flutter_plugin.c  l2d_flutter_plugin.h
test/: PARITY_TESTING.md  cubism_core_smoke_test.dart  parity_baseline.json  parity_regression_test.dart
test/core/: aligned_memory_test.dart  cubism_core_version_test.dart  cubism_moc_test.dart  cubism_model_canvas_test.dart  cubism_model_drawables_test.dart  cubism_model_offscreen_test.dart  cubism_model_parameters_test.dart  cubism_model_parts_test.dart  cubism_model_test.dart  cubism_model_update_test.dart
test/framework/: cubism_model_setting_golden_test.dart  cubism_model_setting_test.dart
test/framework/effect/: cubism_breath_golden_test.dart  cubism_breath_test.dart  cubism_effects_test.dart  cubism_eye_blink_golden_test.dart  cubism_eye_blink_test.dart  cubism_look_golden_test.dart  cubism_look_test.dart  cubism_pose_golden_test.dart  cubism_pose_test.dart
test/framework/integration/: full_pipeline_golden_test.dart  full_pipeline_test.dart
test/framework/math/: cubism_math_golden_test.dart  cubism_math_test.dart  cubism_matrix44_test.dart  cubism_vector2_test.dart
test/framework/motion/: cubism_expression_golden_test.dart  cubism_expression_test.dart  cubism_motion_curve_test.dart  cubism_motion_fade_test.dart  cubism_motion_golden_test.dart  cubism_motion_manager_test.dart  cubism_motion_test.dart
test/framework/physics/: cubism_physics_golden_test.dart  cubism_physics_test.dart
test/golden/: breath_golden.json  expression_haru_F01_golden.json  eye_blink_golden.json  full_pipeline_haru_golden.json  look_golden.json  math_golden.json  model_setting_haru_golden.json  motion_haru_idle_golden.json  motion_queue_golden.json  physics_haru_golden.json  pose_golden.json
test/golden_generator/: CMakeLists.txt  main.cpp  renderer_stub.cpp
test/helpers/: golden_comparator.dart  test_setup.dart
test/widgets/: live2d_widget_test.dart
tool/: profile_pipeline.dart  verify_parity.dart
windows/: CMakeLists.txt
(+235 files in other folders)
